fixed defect in config.yml formatting

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,12 +12,21 @@ collections:
     create: true
     slug: "{{slug}}-{{year}}{{month}}{{day}}-{{hour}}{{minute}}{{second}}"
     fields:
-      - {label: "Name", name: "title", widget: "string"}
-      - {label: "Gender", name: "gender", widget: "select",
-          options:
-            - {label: "Male", value: "male"},
-            - {label: "Female", value: "female"}
-        }
-      - {label: "Date of Birth", name: "dob", widget: "string"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Image", name: "image", widget: "image"}
+      - label: "Name"
+        name: "title"
+        widget: "string"
+      - label: "Gender"
+        name: "gender"
+        widget: "select"
+        options:
+          - {label: "Male", value: "male"}
+          - {label: "Female", value: "female"}
+      - label: "Date of Birth"
+        name: "dob"
+        widget: "string"
+      - label: "Description"
+        name: "description"
+        widget: "text"
+      - label: "Image"
+        name: "image"
+        widget: "image"
