Made dun-roamin' specific

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,6 +24,9 @@ collections:
       - label: "Date of Birth"
         name: "dob"
         widget: "string"
+      - label: "Breed"
+        name: "breed"
+        widget: "string"
       - label: "Description"
         name: "description"
         widget: "text"
